Started applying code inspection fixes.